--- a/dw_blog_django/templates/base/navbar.html
+++ b/dw_blog_django/templates/base/navbar.html
@@ -11,7 +11,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Główna</a>
+                    <a class="nav-link active" aria-current="page" href="#">Start</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -44,16 +44,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Tagi</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">O serii</a>
+                    <a class="nav-link active" aria-current="page" href="#">Projekt</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">O autorach</a>
+                    <a class="nav-link active" aria-current="page" href="#">Autorzy</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Kontakt</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Opublikuj swój tekst</a>
+                    <a class="nav-link active" aria-current="page" href="#">Publikuj</a>
                 </li>
             </ul>
         </div>
