--- a/dw_blog_django/templates/blog/components/splash.html
+++ b/dw_blog_django/templates/blog/components/splash.html
@@ -1,14 +1,26 @@
 <div class="border-bottom border-2 border-dark">
-    <div class="container">
-        <h2 class="main-header display-2">Histioria religii i religioznawstwo.</h2>
-        <p class="fs-5 lh-1 text-muted">Jeśli zadajesz sobie czasem pytania w stylu:</p>
-        <p class="fs-5 lh-1 text-muted">- ile manicheizmu jest w manicheizmie?</p>
-        <p class="fs-5 lh-1 text-muted">- czym różnią się boskie esencje od boskich energii?</p>
-        <p class="fs-5 lh-1 text-muted">- kim byli Karamanlidzi?</p>
-        <p class="fs-5 lh-1 text-muted">- czy można popełnić męczeńską śmierć?</p>
-        <p class="fs-5 lh-1 text-muted">- co wspólnego mają ze sobą rakiety kosmiczne i prawosławni mnisi?</p>
-        <p class="fs-5 lh-1 text-muted">- dlaczego niektórzy Rzymianie identyfikowali się jako Persowie?</p>
-        <p class="fs-5 lh-1 text-muted">- kto czekał na mesjasza zanim to było modne?</p>
-        <p class="fs-5 lh-1 text-muted">to istnieje niezerowa szansa, że ta strona jest dla Ciebie.</p>
+    <div class="container py-4">
+        <div class="row">
+            <div class="col-6 col-md-6 py-1 py-md-5 text-md-start">
+                <h2 class="main-header display-1 mb-3">Histioria i religie.</h2>
+                <p class="fs-6 lh-1 my-2 text-muted fw-bold mb-3">Jeśli zadajesz sobie czasem pytania w stylu:</p>
+                <p class="fs-6 lh-1 my-2 text-muted fw-bold mb-3">- kim byli Karamanlidzi?</p>
+                <p class="fs-6 lh-1 my-2 text-muted fw-bold mb-3">- ile manicheizmu jest w manicheizmie?</p>
+                <p class="fs-6 lh-1 my-2 text-muted fw-bold mb-3">- jak połączyć prawosławie z ewangelikalizmem?
+                </p>
+                <p class="fs-6 lh-1 my-2 text-muted fw-bold mb-3">- czy można popełnić męczeńską śmierć?</p>
+                <p class="fs-6 lh-1 my-2 text-muted fw-bold mb-3">- co wspólnego mają prawosławni mnisi z lotami w
+                    kosmos?</p>
+                <p class="fs-6 lh-1 my-2 text-muted fw-bold mb-3">- którzy Rzymianie identyfikowali się jako
+                    Persowie?
+                </p>
+                <p class="fs-6 lh-1 my-2 text-muted fw-bold mb-3">- czym jest śramana?</p>
+                <p class="fs-6 lh-1 my-2 text-muted fw-bold mb-3">- kto czekał na mesjasza zanim to było modne?</p>
+                <p class="fs-6 lh-1 my-2 text-muted fw-bold mb-4">to istnieje niezerowa szansa, że ta strona jest dla
+                    Ciebie.
+                </p>
+                <button type="button" class="btn btn-dark rounded-pill mb-1 mt-4 fs-5 px-3 py-2">Dasz wiarę?</button>
+            </div>
+        </div>
     </div>
 </div>
