--- a/dw_blog_django/templates/blog/index.html
+++ b/dw_blog_django/templates/blog/index.html
@@ -8,5 +8,30 @@ Wpisy
 {% block template %}
 {% include "../base/navbar.html" %}
 {% include "./components/splash.html" %}
-Kutas
+
+<div class="container">
+    <div class="row">
+        <div class="col-12 col-lg-8">
+            {% for post in posts %}
+            <a class="text-decoration-none" href="#">
+                <div class="card border-0 pb-2 pb-sm-4">
+                    <div class="row">
+                        <div class="col-8">
+                            <div class="card-body p-0">
+                                <div class="pb-2 text-body">{{post.author}}</div>
+                                <h3 class="mb-1">{{post.title}}</h3>
+                                <h5 class="text-muted">{{post.subtitle}}</h5>
+                                <p>{{ post.content|truncatewords:20 }}</p>
+                                <div class="text-muted">{{post.created_at|date:"d-m-Y"}}</div>
+                            </div>
+                            <div class="col-4"></div>
+                        </div>
+                    </div>
+            </a>
+            {% endfor %}
+        </div>
+        <div class="d-none d-lg-block col-4">b</div>
+    </div>
+</div>
+
 {% endblock %}
