--- a/dw_blog_django/templates/base/navbar.html
+++ b/dw_blog_django/templates/base/navbar.html
@@ -11,7 +11,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Start</a>
+                    <a class="nav-link active" aria-current="page" href="/">Start</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -20,7 +20,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a class="dropdown-item" href="#">Główna</a>
+                            <a class="dropdown-item" href="series/main_series">Główna</a>
                             <hr class="dropdown-divider">
                         </li>
                         <li>
