--- a/dw_blog_django/templates/blog/index.html
+++ b/dw_blog_django/templates/blog/index.html
@@ -8,33 +8,6 @@ Wpisy
 {% block template %}
 {% include "../base/navbar.html" %}
 {% include "./components/splash.html" %}
-
-<div class="container pt-5">
-    <div class="row">
-        <div class="col-12 col-lg-8">
-            {% for post in posts %}
-            <a class="text-decoration-none" href="#">
-                <div class="card border-0 pb-2 pb-sm-4">
-                    <div class="row">
-                        <div class="col-8">
-                            <div class="card-body p-0">
-                                <div class="pb-2 text-body ">{{post.author}}</div>
-                                <h3 class="mb-1 text-body fw-bolg">{{post.title}},</h3>
-                                <h5 class="text-muted fs-6">{{post.subtitle}}</h5>
-                                <p class="d-none d-md-block">{{ post.content|truncatewords:20 }}</p>
-                                <div class="text-muted">Opublikowany {{post.created_at|date:"d-m-Y"}}</div>
-                            </div>
-                        </div>
-                        <div class="col-4">
-                            <img src="https://picsum.photos/id/237/205/115" class="img-fluid float-end">
-                        </div>
-                    </div>
-                </div>
-            </a>
-            {% endfor %}
-        </div>
-        <div class="d-none d-lg-block col-4">b</div>
-    </div>
-</div>
+{% include "./components/post_list.html" %}
 
 {% endblock %}
